<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, LogAccelerationActivity!</string>
    <string name="app_name">LogAcceleration</string>
    
    <!-- Strings for OptionsMenu -->
    <string name="logging_off">Turn On Logging</string>
    <string name="logging_on">Turn Off Logging</string>
    <string name="mode_circle">Draw Graphs</string>
    <string name="mode_graph">Draw Circle</string>
    <string name="orientation_flat">Change to Upright</string>
    <string name="orientation_upright">Change to Lying Flat</string>
    <string name="settings">Settings...</string>
    
    <!-- Preferences Strings -->
    <string name="delay_pref_title">Logging Interval</string>
    <string name="delay_pref_desc">How often do you want the value saved to file?</string>
    <string name="seperator_pref_title">Log Seperator</string>
    <string name="seperator_pref_desc">Seperator character to use between log values</string>
    
    <!-- Colour preferences -->
    <string name="colour_pref_title">Change graph colours...</string>
    <string name="colour_pref_desc">Settings for changing graph colours</string>
    <string name="bg_pref_title">Background Colour</string>
    <string name="bg_pref_desc">Colour of the graph background</string>
    <string name="box_pref_title">Text Box Colour</string>
    <string name="box_pref_desc">Colour of the graph text boxes</string>
    <string name="circle_pref_title">Circle Colour</string>
    <string name="circle_pref_desc">Colour of the circle in the XY-plane graph</string>
    <string name="grid_pref_title">Grid Colour</string>
    <string name="grid_pref_desc">Colour of the graph grid and text</string>
    <string name="minmax_pref_title">Min/Max Colour</string>
    <string name="minmax_pref_desc">Colour of the graph min/max lines</string>
    <string name="text_pref_title">Text Colour</string>
    <string name="text_pref_desc">Colour of the text in the graph text boxes</string>
    <string name="x_pref_title">X-axis Colour</string>
    <string name="x_pref_desc">Colour of the X-axis graph</string>
    <string name="y_pref_title">Y-axis Colour</string>
    <string name="y_pref_desc">Colour of the Y-axis graph</string>
    <string name="z_pref_title">Z-axis Colour</string>
    <string name="z_pref_desc">Colour of the Z-axis graph</string>
    <string name="reset_pref_title">Reset all colours</string>
    <string name="reset_pref_desc">Resets all graph colours to their default value</string>
    <string name="web_pref_title">Visit developer\'s website</string>
    <string name="web_pref_desc">Opens browser and takes you to the developer\'s website</string>
    <string name="bug_pref_title">Report a bug</string>
    <string name="bug_pref_desc">Opens browser and takes you to the Github bug report page.</string>
    <string name="source_pref_title">View github page</string>
    <string name="source_pref_desc">Opens browser and takes you to the LogAcceleration source page.</string>
</resources>
