<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:title="Settings">
    
    <PreferenceCategory android:title="Logging Options">
	    <!-- Logging delay -->
	    <ListPreference android:entries="@array/interval_display"
	    				android:entryValues="@array/interval_return"
	    				android:title="@string/delay_pref_title"
	    				android:key="log_delay_pref"
	    				android:summary="@string/delay_pref_desc"
	    				android:defaultValue="100" />
	    
	    <!-- Seperator character -->
	    <ListPreference android:entries="@array/seperator_display"
	    				android:entryValues="@array/seperator_return"
	    				android:title="@string/seperator_pref_title"
	    				android:key="seperator_pref"
	    				android:summary="@string/seperator_pref_desc"
	    				android:defaultValue="," />
    </PreferenceCategory>
    <!-- Graph colours -->
    <PreferenceCategory android:title="Colours">
	    <PreferenceScreen android:key="colour_pref_screen"
	    				  android:title="@string/colour_pref_title"
	    				  android:summary="@string/colour_pref_desc">
	        <ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/bg_pref_title"
		    				android:key="bg_pref"
		    				android:summary="@string/bg_pref_desc"
		    				android:defaultValue="14" />
	        <ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/box_pref_title"
		    				android:key="box_pref"
		    				android:summary="@string/box_pref_desc"
		    				android:defaultValue="5" />
	        <ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/circle_pref_title"
		    				android:key="circle_pref"
		    				android:summary="@string/circle_pref_desc"
		    				android:defaultValue="2" />
	        <ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/grid_pref_title"
		    				android:key="grid_pref"
		    				android:summary="@string/grid_pref_desc"
		    				android:defaultValue="6" />
	        <ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/minmax_pref_title"
		    				android:key="minmax_pref"
		    				android:summary="@string/minmax_pref_desc"
		    				android:defaultValue="15" />
	        <ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/text_pref_title"
		    				android:key="text_pref"
		    				android:summary="@string/text_pref_desc"
		    				android:defaultValue="0" />
	        <ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/x_pref_title"
		    				android:key="x_pref"
		    				android:summary="@string/x_pref_desc"
		    				android:defaultValue="12" />
	        <ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/y_pref_title"
		    				android:key="y_pref"
		    				android:summary="@string/y_pref_desc"
		    				android:defaultValue="9" />
			<ListPreference android:entries="@array/colour_display"
		    				android:entryValues="@array/colour_return"
		    				android:title="@string/z_pref_title"
		    				android:key="z_pref"
		    				android:summary="@string/z_pref_desc"
		    				android:defaultValue="2" />
		</PreferenceScreen>
		<Preference android:title="@string/reset_pref_title"
                    android:summary="@string/reset_pref_desc"
                    android:key="reset_pref" />
    </PreferenceCategory>
</PreferenceScreen>
